# zk-age-verification-demo-android

app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
app/rust/: Cargo.toml  cargokit.yaml
app/rust/src/: api.rs  frb_generated.rs  input_file.rs  lib.rs  remote.rs
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle
app/rust_builder/cargokit/build_tool/lib/src/: environment.dart
flutter_rust_example/: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml  rust_builder.sh
flutter_rust_example/android/app/: build.gradle.kts
flutter_rust_example/android/app/src/main/: AndroidManifest.xml
flutter_rust_example/android/app/src/main/kotlin/com/example/flutter_rust_example/: MainActivity.kt
flutter_rust_example/integration_test/: simple_test.dart
flutter_rust_example/ios/Runner/: Info.plist
flutter_rust_example/ios/Runner.xcodeproj/: project.pbxproj
flutter_rust_example/lib/: main.dart
flutter_rust_example/linux/: CMakeLists.txt
flutter_rust_example/linux/runner/: my_application.cc
flutter_rust_example/macos/Runner.xcodeproj/: project.pbxproj
flutter_rust_example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_rust_example/macos/Runner/Configs/: AppInfo.xcconfig
flutter_rust_example/native/: Cargo.toml  build.rs  rust-toolchain.toml
flutter_rust_example/native/src/: api.rs  custom_global_alloc.rs  lib.rs
flutter_rust_example/rust/: Cargo.toml
flutter_rust_example/rust_builder/: pubspec.yaml
flutter_rust_example/rust_builder/android/: build.gradle  settings.gradle
flutter_rust_example/rust_builder/android/src/main/: AndroidManifest.xml
flutter_rust_example/rust_builder/ios/: rust_lib_flutter_rust_example.podspec
flutter_rust_example/rust_builder/linux/: CMakeLists.txt
flutter_rust_example/rust_builder/macos/: rust_lib_flutter_rust_example.podspec
flutter_rust_example/rust_builder/windows/: CMakeLists.txt
flutter_rust_example/web/: index.html
flutter_rust_example/windows/: CMakeLists.txt
flutter_rust_example/windows/runner/: Runner.rc
