[package]
name = "rust_lib_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
#noir-r1cs = { path="../../../spartan/ProveKit/noir-r1cs" }
#noir-r1cs = { path="../../../spartan/memory-playing/ProveKit/noir-r1cs" }
noir-r1cs = { git = "https://github.com/worldfnd/ProveKit", branch = "make_spartan_zk" }
memmap2 = "0.9.7"
tempfile = "3.21.0"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "multipart"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
