[package]
name = "rust_lib_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.41"
flutter_rust_bridge = "=2.11.1"
provekit-prover = { git = "https://github.com/worldfnd/ProveKit", branch = "px/verifier-server" }
provekit-common = { git = "https://github.com/worldfnd/ProveKit", branch = "px/verifier-server" }
memmap2 = "0.9.7"
tempfile = "3.21.0"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
x509-parser = "0.18.0"
log = "0.4.20"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
