[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
# This tells Cargo to build both a static library and a dynamic library
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Required for flutter_rust_bridge integration
flutter_rust_bridge = "=2.11.1"

# Add any other Rust dependencies here
# For example:
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1.28", features = ["full"] }
