[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
# This tells Cargo to build both a static library and a dynamic library
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Required for flutter_rust_bridge integration
flutter_rust_bridge = "=2.11.1"
#noir-r1cs = { path="../../../spartan/ProveKit/noir-r1cs" }
noir-r1cs = { path="../../../spartan/memory-playing/ProveKit/noir-r1cs" }
memmap2 = "0.9.7"
tempfile = "3.21.0"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "multipart"] }
